--- a/DaivaFramework/test-output/emailable-report.html
+++ b/DaivaFramework/test-output/emailable-report.html
@@ -8,12 +8,12 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="7">Suite</th></tr>
-<tr><td><a href="#t0">Test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">168,856</td><td></td><td></td></tr>
+<tr><th colspan="7">Default suite</th></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">12,738</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">come.daiva.testcases.LoginTestDaiva</td><td><a href="#m0">logOutApp</a></td><td rowspan="1">1552408995881</td><td rowspan="1">2</td></tr><tr class="passedeven"><td><a href="#m1">loginApp</a></td><td rowspan="1">1552408991904</td><td rowspan="1">2503</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">come.daiva.testcases.LoginTestDaiva</td><td><a href="#m0">logOutApp</a></td><td rowspan="1">1552465350396</td><td rowspan="1">4</td></tr><tr class="passedeven"><td><a href="#m1">loginApp</a></td><td rowspan="1">1552465347199</td><td rowspan="1">2473</td></tr></tbody>
 </table>
-<h2>Test</h2><h3 id="m0">come.daiva.testcases.LoginTestDaiva#logOutApp</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">come.daiva.testcases.LoginTestDaiva#logOutApp</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m1">come.daiva.testcases.LoginTestDaiva#loginApp</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
