--- a/DaivaFramework/test-output/old/Default suite/reporter-output.html
+++ b/DaivaFramework/test-output/old/Default suite/reporter-output.html
@@ -1,1 +1,9 @@
-<h2>Reporter output</h2><table></table>
+<h2>Reporter output</h2><table><tr><td>Initialising reports and test is getting ready</td></tr>
+<tr><td>Test initialisation completed and test can be started</td></tr>
+<tr><td>Trying to start browser and getting application ready</td></tr>
+<tr><td>Browser and application is up and running</td></tr>
+<tr><td>Test is above to end</td></tr>
+<tr><td>Test completed and report generated</td></tr>
+<tr><td>Test is above to end</td></tr>
+<tr><td>Test completed and report generated</td></tr>
+</table>
